# d3dGame

./: .clang_complete  .gitignore  .gitmodules  .kateproject  .kdev_include_paths  .ycm_extra_conf.py  .ycm_extra_conf.py.in  CMakeLists.txt  CMakeLists.txt~  Components.h  Components2D.h  Components3D.h  README.md  Rendering.h  SimpleEditor.psess  SimpleEditor130125.vspx  Windowing.sln  config.h.in  d3dGame.kdev4  d3dgameConfig.cmake  ecs.h  graphics2d.plan  windowing.h
.kdev4/: _custom.kdev4  d3dGame.kdev4
3DLib/: 3DLib.cpp  3DLib.vcxproj  3DLib.vcxproj.filters  Device.cpp  Device.h  ReadMe.txt  stdafx.cpp
CrossplatApp/: CMakeLists.txt  CrossplatApp.cpp
GLSLShaders/: BillboardPS.glsl  BillboardVS.glsl  CMakeLists.txt  DefaultPS.glsl  DefaultVS.glsl  ForwardLighting.glslh  LightStructs.glslh
HLSLShaders/: BasicFunctions.hlsl  BillboardPS.hlsl  BillboardVS.hlsl  CMakeLists.txt  CubemappedPS.hlsl  DebugPS.hlsl  DebugVS.hlsl  DefaultPS.cso  DefaultPS.hlsl  DefaultVS.cso  DefaultVS.hlsl  DevaultVS.hvs  ForwardLighting.hlsl  HLSLShaders.vcxproj  HLSLShaders.vcxproj.filters  LightStructs.hlsl  path.txt
Lib2D/: ClassDiagram.cd  ILib2DAnimation.h  ILib2DBrush.h  ILib2DEasing.h  ILib2DPhysicalObject.h  ILib2DScene.h  ILib2DShape.h  ILib2DTransformableObject.h  ILib2DTransformableShape.h  Lib2D.vcxproj  Lib2D.vcxproj.filters  Lib2DAnimatedShape.cpp  Lib2DAnimatedShape.h  Lib2DAnimationManager.cpp  Lib2DAnimationManager.h  Lib2DBitmap.cpp  Lib2DBitmap.h  Lib2DBitmapBrush.cpp  Lib2DBitmapBrush.h  Lib2DBoundingBox.h  Lib2DCollider.cpp  Lib2DCollider.h  Lib2DCollision.h  Lib2DDevice.cpp  Lib2DDevice.h  Lib2DDeviceContext.cpp  Lib2DDeviceContext.h  Lib2DFactory.cpp  Lib2DFactory.h  Lib2DHitInfo.h  Lib2DLinearAnimation.cpp  Lib2DLinearAnimation.h  Lib2DMovableObject.cpp  Lib2DMovableObject.h  Lib2DRect.cpp  Lib2DRect.h  Lib2DScene.cpp  Lib2DScene.h  Lib2DShape.cpp  Lib2DShape.h  (+5 more)
Lib3D/: ClassDiagram.cd  Device.cpp  Device.h  ILib3DShader.cpp  ILib3DShader.h  Lib3D.cpp  Lib3D.vcxproj  Lib3D.vcxproj.filters  Lib3DPixelShader.cpp  Lib3DPixelShader.h  Lib3DShaderCollection.cpp  Lib3DShaderCollection.h  Lib3DVector3.h  Lib3DVertex.h  Lib3DVertexShader.cpp  Lib3DVertexShader.h  MacroUtils.h  ReadMe.txt  stdafx.cpp  stdafx.h
LibAssets/: CMakeLists.txt  GeometryFile.h  ObjFile.cpp  ObjFile.h
LibCairo/: .Renderer.cpp.kate-swp  CMakeLists.txt  Renderer.cpp  (+1 more)
LibCommon/: BasicController2D.h  Bubbly.cpp  Bubbly.h  CMakeLists.txt  Camera.cpp  Camera.h  Data.cpp  Data.h  Entity.cpp  Entity.h  Event.cpp  Event.h  Event.hpp  GeometryFile.h  Get.hpp  GetMessage.hpp  IComponent.h  IMessage.h  IMessageBody.h  IMessageHeader.h  IRenderer.h  IRenderingMessage.h  IShape.h  Input.cpp  Input.h  InputMessage.cpp  InputMessage.h  KeyDownMessage.cpp  KeyDownMessage.h  KeyUpMessage.cpp  KeyUpMessage.h  Keys.h  LibCommon.vcxproj  LibCommon.vcxproj.filters  Marked.hpp  Markers.h  Matrix.h  Messages.h  ObjFile.cpp  ObjFile.h  (+26 more)
LibComponents/: AxisAlignedBB.cpp  AxisAlignedBB.h  Billboard.cpp  Billboard.h  CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  DirectionalLight.cpp  DirectionalLight.h  Effect.cpp  Effect.h  GunDefinition.cpp  GunDefinition.h  IComponent.h  Material.cpp  Material.h  Messages.h  Model.cpp  Model.h  NullComponent.h  ParentLink.cpp  ParentLink.h  PointLight.cpp  PointLight.h  Projectile.cpp  Projectile.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Velocity.cpp  Velocity.h
LibDirect2D/: BitmapLoader.cpp  BitmapLoader.h  CMakeLists.txt  Conversions.cpp  Conversions.h  Direct2DBitmap.cpp  Direct2DBitmap.h  Direct2DRectRenderer.cpp  Direct2DRectRenderer.h  Direct2DRenderer.cpp  Direct2DRenderer.h  Direct2DRenderingMessage.cpp  Direct2DRenderingMessage.h  LibDirect2D.vcxproj  LibDirect2D.vcxproj.filters  Renderer.cpp  Renderer.h  stdafx.h  targetver.h
LibDirect3D/: BillboardRenderer.cpp  BillboardRenderer.h  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  Buffers.cpp  Buffers.h  CMakeLists.txt  DataFormats.h  Direct3DDevice.cpp  Direct3DDevice.h  Direct3DRenderer.cpp  Direct3DRenderer.h  Direct3DRenderingMessage.cpp  Direct3DRenderingMessage.h  Direct3DTexture.cpp  Direct3DTexture.h  LibDirect3D.vcxproj  LibDirect3D.vcxproj.filters  ModelRenderer.cpp  ModelRenderer.h  ReadMe.txt  ShaderResource.cpp  ShaderResource.h  Shaders.cpp  Shaders.h  ShapeData.h  Triangle.cpp  Triangle.h  stdafx.cpp  stdafx.h
LibGLFW/: CMakeLists.txt  Keys.cpp  Keys.h  RenderLoop.h  Win32Window.cpp  Window.cpp  Window.h
LibOpenGL/: .GLModelRenderer.h.kate-swp  CMakeLists.txt  GLAttribArray.cpp  GLAttribArray.h  GLBillboardRenderer.cpp  GLBillboardRenderer.h  GLBuffer.cpp  GLBuffer.h  GLData.h  GLHandle.h  GLModelRenderer.cpp  GLModelRenderer.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLUniforms.cpp  GLUniforms.h  GLUtils.cpp  GLUtils.h  ModelRenderer.cpp  ModelRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  gl_core_3_1.cpp  gl_core_3_1.hpp  stdafx.h
LibSystems/: AxisAlignedBBSystem.cpp  AxisAlignedBBSystem.h  CMakeLists.txt  CollisionDetectionSystem.cpp  CollisionDetectionSystem.h  CollisionSystem.cpp  CollisionSystem.h  Group.cpp  Group.h  GunController.cpp  GunController.h  MovementController3D.cpp  MovementController3D.h  ParentingSystem.cpp  ParentingSystem.h  PremulVelocitySystem3D.cpp  PremulVelocitySystem3D.h  ProjectileSystem.cpp  ProjectileSystem.h  SimpleCollisionSystem.cpp  SimpleCollisionSystem.h  SystemSwapper.cpp  SystemSwapper.h  VelocitySystem3D.cpp  VelocitySystem3D.h  stdafx.h
Utils/: CMakeLists.txt  Property.h  Utils.vcxproj  Utils.vcxproj.filters  cache.h  config.h.in  container.h  endian.h  event.h  exceptions.h  fib.h  files.h  functions.h  identifier.h  lazy_container.h  make_unique.h  math.h  maybe.h  preprocess.h  sets.h  strcmp.cpp  strings.h  type_traits.h
windows/: CMakeLists.txt  ComUtils.cpp  ComUtils.h  Keys.cpp  Keys.h  WGLContext.cpp  WGLContext.h  WinMain.cpp  WinMain.h  Window.cpp  Window.h  stdafx.h  windows.vcxproj  windows.vcxproj.filters  windows_keys.cpp  windows_keys.h
(+194 files in other folders)
