set(libcomponents_files 
	Transform.h
	Transform.cpp
	Model.h
	Model.cpp
	Velocity.h
	Velocity.cpp
	Camera.h
	Camera.cpp
	Texture.h
	Texture.cpp
	Effect.h
    Effect.cpp
	Material.h
	Material.cpp
	DirectionalLight.h
	DirectionalLight.cpp
	PointLight.h
	PointLight.cpp
	Projectile.h
	Projectile.cpp
	AxisAlignedBB.h
	AxisAlignedBB.cpp
	Collision.h
	Collision.cpp
	Billboard.h
	Billboard.cpp
	stdafx.h
	stdafx.cpp
	)

add_library(LibComponents STATIC ${libcomponents_files})
