set(libcomponents_files 
	Transform.h
	Transform.cpp
	Model.h
	Velocity.h
	Velocity.cpp
	Camera.h
	Camera.cpp
	IComponent.h
	Shaders.h
	Shaders.cpp
	Texture.h
	Texture.cpp
	Effect.h
	Material.h
	Material.cpp
	DirectionalLight.h
	DirectionalLight.cpp
	PointLight.h
	PointLight.cpp
	Projectile.h
	Projectile.cpp
	ParentLink.h
	ParentLink.cpp
	AxisAlignedBB.h
	AxisAlignedBB.cpp
	Collision.h
	Collision.cpp
	Messages.h
	Messages.cpp
	NullComponent.h
	Billboard.h
	Billboard.cpp
	GunDefinition.h
	GunDefinition.cpp
	stdafx.h
	stdafx.cpp
	)

add_library(LibComponents STATIC ${libcomponents_files})