set(LibOpenGL_files
	OpenGLRenderer.h
	OpenGLRenderer.cpp
	GLModelRenderer.h
	GLModelRenderer.cpp
	GLBillboardRenderer.h
	GLBillboardRenderer.cpp
	GLBuffer.h
	GLBuffer.cpp
	GLShader.h
	GLShader.cpp
	GLProgram.h
	GLProgram.cpp
	GLAttribArray.h
	GLAttribArray.cpp
	GLUniforms.h
	GLUniforms.cpp
	GLTexture.h
	GLTexture.cpp
	GLUtils.h
	GLUtils.cpp
	GLData.cpp
	GLData.h
	gl_core_3_1.hpp
	gl_core_3_1.cpp
	stdafx.h
	stdafx.cpp
)
add_library(LibOpenGL STATIC ${LibOpenGL_files})
target_link_libraries(LibOpenGL ${OPENGL_gl_LIBRARY} Systems LibCommon)
