set(system_files
	AxisAlignedBBSystem.h
	AxisAlignedBBSystem.cpp
	VelocitySystem3D.h
	VelocitySystem3D.cpp
	PremulVelocitySystem3D.h
	PremulVelocitySystem3D.cpp
	MovementController3D.h
	MovementController3D.cpp
	CollisionDetectionSystem.h
	CollisionDetectionSystem.cpp
	SimpleCollisionSystem.h
	SimpleCollisionSystem.cpp
	ProjectileSystem.h
	ProjectileSystem.cpp
	SystemSwapper.h
	SystemSwapper.cpp
	GunController.h
	GunController.cpp
	ParentingSystem.h
	ParentingSystem.cpp
	Group.h
	Group.cpp
	stdafx.h
	stdafx.cpp
	)
add_library(Systems STATIC ${system_files})
